# ep-trazabilidad

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: feeds.yaml  settings.yaml
data/: teletipos_ejemplo.csv  teletipos_europapress.csv  teletipos_europapress.json
docs/arquitectura/: README.md  esquema.md  flujo.md
docs/desarrollo/: README.md  decisiones.md  roadmap.md
docs/problema/: README.md  alternativas.md
docs/uso/: README.md  configuracion.md  formatos.md
src/: api.py  cli.py  config.py
src/db/: database.py
src/ingesta/: __init__.py  rss.py
src/matching/: matcher.py
src/scraping/: fetch.py  scraper.py
web/: package-lock.json
web/app/: dashboard.tsx  globals.css  layout.tsx  page.tsx
